Added comentary warning about pagination
